--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello people
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title style="text-align: center;">Git</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body style="background: white url(./img/git.png); text-align: center; font-family: 'Ysabeau', sans-serif;">
+    <H1>WELCOME TO GIT ;)</H1>
+    <h2>This is a small fragment about git</h2>
+    <h3><a href="https://www.w3schools.com/git/default.asp">Click here</a></h3>
+
+</body>
+
+</html>
